# trackdlo

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build.yml  ci.yml
camera_setting/: preset_decimation_4.0_depth_step_100.json
config/: TrackDLO_params.yaml  test1_controllers.yaml  test1_hardware_egm.yaml
cpp/include/: evaluator.h  gltp_node.h  run_evaluation.h  trackdlo.h  utils.h
cpp/src/: evaluator.cpp  run_evaluation.cpp  test.cpp  test_node.cpp  trackdlo.cpp  trackdlo_node.cpp  tracking_node.cpp  utils.cpp
docker/: Dockerfile.noetic  init_workspace.sh  requirements.txt  ros_entrypoint.sh  run_docker.sh
docs/: COLOR_THRESHOLD.md  DOCKER.md  LEARN_MORE.md  RUN.md
include/: cpd.h  tracking_node.h
launch/: collect_joint_data.launch  evaluation.launch  evaluation_cpp.launch  export_images.launch  gltp.launch  pub_pointcloud.launch  python_charuco_detector.launch  realsense_node.launch  realsense_node_eval.launch  realsense_node_eval_all.launch  realsense_node_eval_trackdlo.launch  replay_bag.launch  replay_bag_eval.launch  replay_bag_tracking.launch  reply_bag.launch  run_evaluation.launch  test1.launch  trackdlo.launch  trackdlo_eval.launch  visualize_output.launch
python/: eval_trackdlo.py  evaluation.py  test_node.py  trackdlo.py  tracking_dev_ros.py  tracking_from_bag_replay.py
rviz/: multi_wire_tracking_test.rviz  replay_bag.rviz  tracking.rviz  tracking_comparison.rviz  tracking_eval.rviz  tracking_eval_all.rviz  tracking_eval_trackdlo.rviz  tracking_test.rviz
settings/: TrackDLO_params.yaml
src/: auto_movements_from_pkl.py  calib_data_collection.py  charuco_detect_pub.py  collect_depth_info.py  collect_joint_states.py  collect_pointcloud.py  deproject.py  deproject_aligned_depth.py  detector_test.py  eval_cpd_lle.py  eval_mct_predict.py  img_tf_collection.py  mask.py  move_to_target.py  multi_wire_tracking_dev.py  opencv_interactive.py  pointcloud.py  print_accurate_tf.py  print_depth_info.py  pub_camera_tf.py  pub_sub_test.py  realsense_custom_settings.py  rob1_control.py  rob2_control.py  test1.py  test2.py  test3.py  track_from_bag_replay.py  tracking_cpd.py  tracking_cpd_lle.py  tracking_cpd_lle_dev.py  tracking_dev_ros.py  tracking_ecpd_from_bag.py  two_wire_tracking.py
src/cpp/: cpd.cpp  mask.cpp  test.cpp  tracking_node.cpp
src/evaluation/: eval_cpd_lle.py  eval_trackdlo.py  tracking_img_from_pointcloud_topic.py
src/python/: eval_trackdlo.py  tracking_dev_ros.py  tracking_from_bag_replay.py
src/utils/: check_cpp.py  mask.py  opencv_interactive.py  pub_camera_tf.py
trackdlo/include/: evaluator.h  trackdlo.h  trackdlo_node.h  utils.h
trackdlo/src/: evaluator.cpp  gltp_node.cpp  initialize.py  run_evaluation.cpp  trackdlo.cpp  trackdlo_node.cpp  utils.cpp  utils.py
utils/: algo_eval_plot.py  bag.py  check_cpp.py  collect_pointcloud.py  color_picker.py  evaluation.py  evaluation.sh  evaluation_cdcpd.sh  evaluation_cdcpd2.sh  evaluation_cdcpd2_no_gripper.sh  evaluation_gltp.sh  evaluation_kernel.sh  evaluation_kernels.sh  evaluation_trackdlo.sh  kernel_eval_plot.py  line_sphere_intersection.py  mask.py  opencv_interactive.py  plot.py  plot_text.py  pub_camera_tf.py  simulate_occlusion.py  simulate_occlusion_eval.py  tracking_result_img_from_pointcloud_topic.py  tracking_test.py
