<?xml version="1.0"?>
<package format="2">
  <name>TrackDLO</name>
  <version>1.0.0</version>
  <description>TrackDLO ROS package</description>
  <maintainer email="jingyix4@illinois.edu">Jingyi Xiang</maintainer>
  <author email="jingyix4@illinois.edu">Jingyi Xiang</author>
  <author email="hdinkel2@illinois.edu">Holly Dinkel</author>
  <license>MIT</license>
  
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>abb_egm_state_controller</build_depend>
  <build_depend>abb_rws_service_provider</build_depend>
  <build_depend>abb_rws_state_publisher</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <build_export_depend>abb_egm_hardware_interface</build_export_depend>
  <build_export_depend>abb_egm_state_controller</build_export_depend>
  <build_export_depend>abb_rws_service_provider</build_export_depend>
  <build_export_depend>abb_rws_state_publisher</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>velocity_controllers</build_export_depend>
  <exec_depend>abb_egm_hardware_interface</exec_depend>
  <exec_depend>abb_egm_state_controller</exec_depend>
  <exec_depend>abb_rws_service_provider</exec_depend>
  <exec_depend>abb_rws_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend> -->

</package>
