<?xml version="1.0"?>
<package format="2">
  <name>TrackDLO</name>
  <version>1.0.0</version>
  <description>TrackDLO ROS package</description>
  <maintainer email="jingyix4@illinois.edu">Jingyi Xiang</maintainer>
  <author email="jingyix4@illinois.edu">Jingyi Xiang</author>
  <author email="hdinkel2@illinois.edu">Holly Dinkel</author>
  <license>MIT</license>
  
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
